Editing support for impl-level secure dependency (#47)
* Bump tycho-version from 3.0.3 to 4.0.2

Bumps `tycho-version` from 3.0.3 to 4.0.2.

Updates `org.eclipse.tycho:tycho-maven-plugin` from 3.0.3 to 4.0.2
- [Release notes](https://github.com/eclipse-tycho/tycho/releases)
- [Changelog](https://github.com/eclipse-tycho/tycho/blob/tycho-4.0.2/RELEASE_NOTES.md)
- [Commits](https://github.com/eclipse-tycho/tycho/compare/tycho-3.0.3...tycho-4.0.2)

Updates `org.eclipse.tycho:tycho-surefire-plugin` from 3.0.3 to 4.0.2

Updates `org.eclipse.tycho:target-platform-configuration` from 3.0.3 to 4.0.2
- [Release notes](https://github.com/eclipse-tycho/tycho/releases)
- [Changelog](https://github.com/eclipse-tycho/tycho/blob/tycho-4.0.2/RELEASE_NOTES.md)
- [Commits](https://github.com/eclipse-tycho/tycho/compare/tycho-3.0.3...tycho-4.0.2)

Updates `org.eclipse.tycho:tycho-p2-publisher-plugin` from 3.0.3 to 4.0.2
- [Release notes](https://github.com/eclipse-tycho/tycho/releases)
- [Changelog](https://github.com/eclipse-tycho/tycho/blob/tycho-4.0.2/RELEASE_NOTES.md)
- [Commits](https://github.com/eclipse-tycho/tycho/compare/tycho-3.0.3...tycho-4.0.2)

Updates `org.eclipse.tycho:tycho-p2-director-plugin` from 3.0.3 to 4.0.2
- [Release notes](https://github.com/eclipse-tycho/tycho/releases)
- [Changelog](https://github.com/eclipse-tycho/tycho/blob/tycho-4.0.2/RELEASE_NOTES.md)
- [Commits](https://github.com/eclipse-tycho/tycho/compare/tycho-3.0.3...tycho-4.0.2)

---
updated-dependencies:
- dependency-name: org.eclipse.tycho:tycho-maven-plugin
  dependency-type: direct:production
  update-type: version-update:semver-major
- dependency-name: org.eclipse.tycho:tycho-surefire-plugin
  dependency-type: direct:production
  update-type: version-update:semver-major
- dependency-name: org.eclipse.tycho:target-platform-configuration
  dependency-type: direct:production
  update-type: version-update:semver-major
- dependency-name: org.eclipse.tycho:tycho-